# rust-script-bundler

./: Cargo.toml  README.md
src/: lib.rs  print.rs
