[package]
name = "rust-script-bundler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
syn-inline-mod = "0.4.0"
syn = { version = "1.0.82", default-features = false, features = ["printing"] }
proc-macro2 = { version = "1.0.33", features = ["span-locations"] }
quote = "1.0.10"
thiserror = "1.0.30"
cargo_toml = "0.10.2"

